--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.55.3",
+    "axios": "^1.7.8",
     "ethers": "^6.13.4",
     "next": "^14.2.10",
     "react": "^18.3.1",
